<resources>
    <string name="app_name">CarrosMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="registro_carros">Registro de Carros</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="informacion">Información</string>

    <string name="kia">Kia</string>
    <string name="toyota">Toyota</string>
    <string name="chevrolet">Chevrolet</string>
    <string-array name="marca">
        <item>@string/kia</item>
        <item>@string/toyota</item>
        <item>@string/chevrolet</item>
    </string-array>

    <string name="modelo1">2008</string>
    <string name="modelo2">2009</string>
    <string name="modelo3">2010</string>
    <string-array name="modelo">
        <item>@string/modelo1</item>
        <item>@string/modelo2</item>
        <item>@string/modelo3</item>
    </string-array>

    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string-array name="color">
        <item>@string/blanco</item>
        <item>@string/negro</item>
        <item>@string/rojo</item>
    </string-array>

    <string name="registro_guardado">Registro Guardado</string>

    <string name="titulo_eliminar_mensaje">Eliminar Carro</string>
    <string name="eliminar_mensaje">¿Está seguro que desea eliminar este carro?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>

    <string name="existe_placa">Esta placa ya está registrada</string>
    <string name="editar_carro">Editar Carro</string>

    <string name="mensaje_error_placa">Debe ingresar la placa</string>

    <string name="mensaje_error_precio">Debe ingresar el precio</string>
    <string name="mensaje_modificado">Carro Modificado</string>
    <string name="cancelar">Cancelar</string>

</resources>
